changes for provisioningstate enum -> string + allowing statuscode 202 for PUT manifest call

--- a/src/ResourceManagement/AzureStackAdmin/AzureStackManagement/AzureStackManagement.csproj
+++ b/src/ResourceManagement/AzureStackAdmin/AzureStackManagement/AzureStackManagement.csproj
@@ -27,7 +27,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Microsoft.AzureStack.Management.nuget.proj" />
-    <None Include="Microsoft.AzureStack.Management.nuspec" />
+    <None Include="Microsoft.AzureStack.Management.nuspec">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="packages.config">
       <SubType>Designer</SubType>
     </None>
