Adding subscriptions tests for ms.subscriptions.admin namespace

--- a/src/ResourceManagement/AzureStackAdmin/AzureStackAdmin.Tests/AzureStackAdmin.Tests.csproj
+++ b/src/ResourceManagement/AzureStackAdmin/AzureStackAdmin.Tests/AzureStackAdmin.Tests.csproj
@@ -24,6 +24,7 @@
     <Compile Include="OfferTests.cs" />
     <Compile Include="LocationTests.cs" />
     <Compile Include="ResourceProviderManifest.cs" />
+    <Compile Include="AdminSubscriptionTests.cs" />
     <Compile Include="SubscriptionTests.cs" />
     <Compile Include="PlanTests.cs" />
     <Compile Include="RecordedDelegatingHandler.cs" />
