--- a/src/AzureStack/Subscriptions/Subscriptions/Microsoft.AzureStack.Management.Subscriptions.csproj
+++ b/src/AzureStack/Subscriptions/Subscriptions/Microsoft.AzureStack.Management.Subscriptions.csproj
@@ -2,12 +2,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <Import Project="$([MSBuild]::GetPathOfFileAbove('AzSdk.reference.props'))" />
   <PropertyGroup>
-    <PackageId>Microsoft.AzureStack.Management.Subscriptions.Admin</PackageId>
-    <Description>Provides developers with libraries for the subscriptions admin under AzureStack to manage subscriptions</Description>
+    <PackageId>Microsoft.AzureStack.Management.Subscriptions</PackageId>
+    <Description>Provides developers with libraries for the subscriptions under AzureStack to manage subscriptions</Description>
     <VersionPrefix>0.1.0-preview</VersionPrefix>
-    <AssemblyName>Microsoft.AzureStack.Management.Subscriptions.Admin</AssemblyName>
+    <AssemblyName>Microsoft.AzureStack.Management.Subscriptions</AssemblyName>
     <PackageTags>Microsoft Azure Stack;Subscription;REST HTTP client;azureostackfficial;netcore451511</PackageTags>
-    <PackageReleaseNotes>This is a preview release of the AzureStack Subscription Admin SDK.</PackageReleaseNotes>
+    <PackageReleaseNotes>This is a preview release of the AzureStack Subscription SDK.</PackageReleaseNotes>
   </PropertyGroup>
   <PropertyGroup>
     <TargetFrameworks>net452;netstandard1.4</TargetFrameworks>
