--- a/src/AzureStack/SubscriptionsAdmin/Subscriptions.Admin/Microsoft.AzureStack.Management.Subscriptions.Admin.csproj
+++ b/src/AzureStack/SubscriptionsAdmin/Subscriptions.Admin/Microsoft.AzureStack.Management.Subscriptions.Admin.csproj
@@ -5,7 +5,7 @@
     <PackageId>Microsoft.AzureStack.Management.Subscriptions.Admin</PackageId>
     <Description>Provides developers with libraries for the subscriptions admin under AzureStack to manage subscriptions</Description>
     <VersionPrefix>0.1.0-preview</VersionPrefix>
-    <AssemblyName>Microsoft.AzureStack.Management.Subscriptions.Admin</AssemblyName>
+    <AssemblyName>d7</AssemblyName>
     <PackageTags>Microsoft Azure Stack;Subscription;REST HTTP client;azureostackfficial;netcore451511</PackageTags>
     <PackageReleaseNotes>This is a preview release of the AzureStack Subscription Admin SDK.</PackageReleaseNotes>
   </PropertyGroup>
